# SurvivalNet-BIO

./: .gitignore  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  Snakefile  config.yaml  environment.yml  pyproject.toml
.github/workflows/: test.yml
examples/: demo.ipynb
scripts/: _bootstrap.py  plot_km.py  plot_models.py  prepare_clinical.py  prepare_split.py  summary.py  train_cox.py  train_deepsurv.py  train_lasso.py
src/survivalnet/: __init__.py  _version.py  cli.py  core.py  exceptions.py  io.py  visualize.py  workflow.py
src/survivalnet/models/: __init__.py  cox.py  deepsurv.py  lasso_cox.py
tests/: test_core.py  test_cox_search.py  test_deepsurv_search.py  test_import.py  test_io.py  test_lasso_cox.py  test_workflow_paths.py
