[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivalnet"
version = "0.1.0"
description = "A Python toolkit for survival analysis and risk prediction."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "survivalnet team" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "lifelines>=0.27",
  "matplotlib>=3.7",
  "click>=8.1",
  "scikit-learn>=1.3",
  "pycox>=0.3",
  "torchtuples>=0.2",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "snakemake>=8.0",
  "pyyaml>=6.0",
  "jupyter>=1.0",
]

[project.scripts]
survivalnet = "survivalnet.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
